[package]
name = "ctodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.4.0", features = ["chrono-0_4"] }
chrono = "0.4.23"
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = "1.24.1"
toml = "0.5.10"
